<resources>
  <string name="app_name">Dogearn</string>
  <string name="logo">Logo</string>
  <string name="login">Login</string>
  <string name="enter_username">Enter Your Email</string>
  <string name="enter_password">Enter Your Password</string>
  <string name="version">Build Version</string>
  <string name="dogearn_wallet">Dogearn Wallet</string>
  <string name="wallet">Wallet</string>
  <string name="example_doge">0.00000000 DOGE</string>
  <string name="icon">Icon</string>
  <string name="login_account">Login Account</string>
  <string name="dont_have_account">Dont have account ?</string>
  <string name="register">REGISTER</string>
  <string name="dogechain">Dogechain</string>
  <string name="setting">Setting</string>
  <string name="upgrade_account">Upgrade LOT</string>
  <string name="register_account">Register Account</string>
  <string name="network">Network</string>
  <string name="report">Report</string>
  <string name="received_doge">Received Doge</string>
  <string name="send_doge">Send Doge</string>
  <string name="pin">Pin</string>
  <string name="grade">LOT (Letter Of Transaction)</string>
  <string name="sign_up">Sign Up</string>
  <string name="email">Your Email</string>
  <string name="whatsapp_number">Your Phone Number</string>
  <string name="confirmation_password">Retype Password</string>
  <string name="password">Password</string>
  <string name="transaction_password">Secondary Password</string>
  <string name="confirm_transaction_password">Retype secondary Password</string>
  <string name="if_indonesia">example : 6500012300000</string>
  <string name="already_have_an_account">Already have an account ?</string>
  <string name="sponsor">Email or Phone Sponsor</string>
  <string name="logout">Logout</string>
  <string name="buy">Upgrade Now</string>
  <string name="upgrade_to">Upgrade To</string>
  <string name="edit_password_title">Edit Password</string>
  <string name="edit_password">Edit Password</string>
  <string name="edit_password_transaction">Edit Secondary Password</string>
  <string name="automatic_stake">Automatic Stake</string>
  <string name="manual_stake">Manual Stake</string>
  <string name="enter_code_from_email">Enter code from Email</string>
  <string name="send_code_to_email">Send Code To Email</string>
  <string name="save">Save</string>
  <string name="forgot_password">Forgot password ?</string>
  <string name="added">+</string>
  <string name="input_results">Input Results</string>
  <string name="send_password">Send Password</string>
  <string name="click_the_logo_to_scan_barcode">click the logo to scan barcode</string>
  <string name="doge_format">10</string>
  <string name="password_must_be_minimum_6_characters">Password must be minimum 6 characters</string>
  <string name="secondary_password_must_be_character_number">Secondary password must be 4 character number</string>
  <string name="destination_wallet">Destination Wallet</string>
  <string name="amount">Amount</string>
  <string name="example_yourmail_mail_com">example: email@mail.com</string>
  <string name="email_user">Email</string>
  <string name="phone_number_user">Phone Number</string>
  <string name="send_pin">Send Pin</string>
  <string name="retype_new_secondary_password">Retype new Secondary Password</string>
  <string name="new_secondary_password">New Secondary Password</string>
  <string name="new_password">New Password</string>
  <string name="retype_new_password">Retype New Password</string>
  <string name="info">Info</string>
  <string name="home">Home</string>
  <string name="history_pin">History Pin</string>
  <string name="history_grade">History LOT</string>
  <string name="history_doge">History Doge</string>
  <string name="history_doge_in">History Doge Income</string>
  <string name="history_doge_out">History Doge Outgo</string>
  <string name="edit_phone_number">Edit Phone Number</string>
  <string name="new_phone_number">New Phone Number</string>
  <string name="retype_phone_number">Retype Phone Number</string>
  <string name="balance">Balance</string>
  <string name="whatsapp_sponsor">Contact Sponsor</string>
  <string name="description_register">Registration requires confirmation that will be entered in the registered email, If within 24 hours of not confirming the registration will be deleted, please re-register</string>
  <string name="download_new_app">Download New App</string>
  <string name="your_link_ref">Your link</string>
  <string name="dollar">$</string>
  <string name="high_10">10</string>
  <string name="high_20">20</string>
  <string name="high_30">30</string>
  <string name="high_40">40</string>
  <string name="high_50">50</string>
  <string name="high_60">60</string>
  <string name="high_70">70</string>
  <string name="high_80">80</string>
  <string name="high_90">90</string>
  <string name="high_100">100</string>
  <string name="stake">Stake</string>
</resources>