<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterFnActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center"
      android:background="@drawable/background">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:background="@drawable/card_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        android:elevation="30dp"
        android:gravity="center">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="80dp"
          app:srcCompat="@drawable/logo_ii_squard_typo"
          android:contentDescription="@string/logo"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <TextView
          android:text="@string/sign_up"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="17sp"
          android:gravity="center"
          android:textStyle="bold"
          android:textColor="@color/colorPrimary"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="20dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:ems="10"
          android:id="@+id/editTextTextSponsor"
          android:background="@drawable/edit_text_mode_3"
          android:hint="@string/sponsor"
          android:autofillHints="@string/enter_username"
          android:drawablePadding="10dp"
          android:textColor="@color/colorPrimaryDark"
          android:gravity="center"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="phone"
          android:ems="10"
          android:id="@+id/editTextTextPhone"
          android:background="@drawable/edit_text_mode_3"
          android:hint="@string/whatsapp_number"
          android:autofillHints="@string/enter_username"
          android:drawablePadding="10dp"
          android:textColor="@color/colorPrimaryDark"
          android:gravity="center"/>

      <TextView
          android:text="@string/if_indonesia"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="12sp"
          android:gravity="center"
          android:textColor="@color/colorPrimary"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:ems="10"
          android:id="@+id/editTextTextEmail"
          android:background="@drawable/edit_text_mode_3"
          android:hint="@string/email"
          android:autofillHints="@string/enter_username"
          android:drawablePadding="10dp"
          android:textColor="@color/colorPrimaryDark"
          android:gravity="center"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextPassword"
          android:background="@drawable/edit_text_mode_3"
          android:hint="@string/password"
          android:autofillHints="@string/enter_password"
          android:textColor="@color/colorPrimaryDark"
          android:gravity="center"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextPasswordConfirmation"
          android:background="@drawable/edit_text_mode_3"
          android:hint="@string/confirmation_password"
          android:autofillHints="@string/enter_password"
          android:textColor="@color/colorPrimaryDark"
          android:gravity="center"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextTextTransactionPassword"
          android:background="@drawable/edit_text_mode_3"
          android:hint="@string/transaction_password"
          android:autofillHints="@string/transaction_password"
          android:drawablePadding="10dp"
          android:textColor="@color/colorPrimaryDark"
          android:gravity="center"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:ems="10"
          android:id="@+id/editTextTextConfirmTransactionPassword"
          android:background="@drawable/edit_text_mode_3"
          android:hint="@string/confirm_transaction_password"
          android:autofillHints="@string/confirm_transaction_password"
          android:drawablePadding="10dp"
          android:textColor="@color/colorPrimaryDark"
          android:gravity="center"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <Button
          android:text="@string/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="30dp"
          android:layout_marginEnd="30dp"
          android:id="@+id/buttonRegister"
          android:background="@drawable/button_success"
          android:textColor="@color/textSecondary"
          android:elevation="10dp"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <TextView
          android:id="@+id/textViewMessage"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textColor="@color/Info"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <TextView
        android:text="@string/already_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/textSecondary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textViewLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/colorPrimaryLight"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

  </LinearLayout>

</ScrollView>