<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="100dp"
      app:srcCompat="@drawable/logo_ii"
      android:contentDescription="@string/logo"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="30dp"/>

  <TextView
      android:text="@string/version"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/textViewVersion"
      android:gravity="center"
      android:textStyle="bold"
      android:textColor="@color/textPrimary"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="10dp"/>

  <LinearLayout
      android:background="@drawable/card_default"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      android:padding="15dp"
      android:elevation="30dp"
      android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:text="@string/login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextTextUsername"
        android:background="@drawable/edit_text_mode_3"
        android:hint="@string/enter_username"
        android:autofillHints="@string/enter_username"
        android:drawablePadding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:background="@drawable/edit_text_mode_3"
        android:hint="@string/enter_password"
        android:autofillHints="@string/enter_password"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/buttonLogin"
        android:background="@drawable/button_success"
        android:textColor="@color/textSecondary"
        android:elevation="10dp"/>

    <Button
        android:text="@string/download_new_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/buttonNewApp"
        android:background="@drawable/button_success"
        android:textColor="@color/textSecondary"
        android:elevation="10dp"
        android:visibility="gone"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="25dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textViewRegister"
          android:text="@string/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textStyle="bold"
          android:textSize="19sp"
          android:textColor="@color/colorPrimaryLight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

      <TextView
          android:id="@+id/textViewForgotPassword"
          android:text="@string/forgot_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textStyle="bold"
          android:textSize="14sp"
          android:textColor="@color/colorPrimaryLight"/>

    </LinearLayout>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="20dp"/>

</LinearLayout>