<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.menu.RegisterActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">

  <LinearLayout
      android:background="@drawable/card_default"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      android:padding="15dp"
      android:elevation="30dp"
      android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:text="@string/register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextTextPhone"
        android:background="@drawable/edit_text_mode_3"
        android:hint="@string/whatsapp_number"
        android:autofillHints="@string/enter_username"
        android:drawablePadding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <TextView
        android:text="@string/if_indonesia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextTextEmail"
        android:background="@drawable/edit_text_mode_3"
        android:hint="@string/email"
        android:autofillHints="@string/enter_username"
        android:drawablePadding="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/buttonRegister"
        android:background="@drawable/button_success"
        android:textColor="@color/textSecondary"
        android:elevation="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/Info"/>

  </LinearLayout>

</LinearLayout>