<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.menu.EditPasswordActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center">

  <LinearLayout
      android:background="@drawable/card_default"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      android:padding="15dp"
      android:elevation="30dp"
      android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:text="@string/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:background="@drawable/edit_text_mode_3"
        android:hint="@string/new_password"
        android:autofillHints="@string/new_password"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPasswordConfirmation"
        android:background="@drawable/edit_text_mode_3"
        android:hint="@string/retype_new_password"
        android:autofillHints="@string/retype_new_password"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="20dp"/>

  <LinearLayout
      android:background="@drawable/card_default"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginStart="40dp"
      android:layout_marginEnd="40dp"
      android:padding="15dp"
      android:elevation="30dp"
      android:gravity="center">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:text="@string/transaction_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="10"
        android:id="@+id/editTextSecondaryPassword"
        android:background="@drawable/edit_text_mode"
        android:drawableStart="@drawable/ic_baseline_lock_open"
        android:drawableTint="@color/White"
        android:textColor="@color/colorPrimary"
        android:autofillHints="@string/doge_format"
        android:drawablePadding="10dp"
        tools:ignore="LabelFor"
        android:hint="@string/transaction_password"
        android:textColorHint="@color/Dark"
        android:maxLength="4"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="20dp"/>

  <Button
      android:text="@string/save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:id="@+id/buttonUpdate"
      android:background="@drawable/button_success"
      android:textColor="@color/textSecondary"
      android:elevation="10dp"/>

</LinearLayout>